--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,450 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-/* Variables */
+/* ------ VARIABLES ------ */
 :root {
   --font-color: #000;
-  --background-color: #f2f2f2;
+  --main-bg-color: #fff;
+  --second-bg-color: #f2f2f2;
   --primary-color: #0065fc;
-  --seconday: #deebff;
-  --main-border-radius: 10px;
-  --main-shadow: 2px 2px 10px grey;
+  --second-color: #deebff;
+  --radius: 20px;
+  --main-shadow: 2px 2px 8px 0px #d4d3d3;
 }
 
-/* General */
+/* ------ GENERAL ------ */
 body {
+  max-width: 1500px;
+  margin: auto;
   font-family: "Raleway", sans-serif;
+  cursor: default;
 }
 
-/* CHECKBOX :  Hide the browser's default checkbox */
-.filter-container input {
+main {
+  padding: 0 3.5rem 3rem;
+}
+
+section {
+  padding: 1rem 0;
+}
+h1 {
+  font-size: 1.35rem;
+  margin: 0.4rem 0;
+}
+h2 {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+h3 {
+  font-size: 1rem;
+  margin: 0;
+}
+p {
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: var(--font-color);
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* ------ HEADER ------ */
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 3.5rem;
+  background-color: var(--main-bg-color);
+}
+
+header .logo {
+  padding: 2rem 0 0.5rem;
+}
+
+header nav {
+  color: var(--font-color);
+}
+header nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+header nav li {
+  display: flex;
+}
+header nav ul a {
+  padding: 2rem 1.5rem;
+}
+header nav .active {
+  border-top: 3px solid var(--primary-color);
+  color: var(--primary-color);
+}
+header nav .register {
+  font-weight: bold;
+  color: var(--primary-color);
+}
+
+/* ------ MAIN ------ */
+/* --- Search Section */
+form {
+  margin: 1rem 0;
+}
+form .search-bar {
+  display: flex;
+  justify-content: stretch;
+  width: 26rem;
+  height: 2.8rem;
+}
+form input {
+  width: 14rem;
+  padding: 1rem;
+  border: none;
+  border-top: 1px solid var(--second-bg-color);
+  border-bottom: 1px solid var(--second-bg-color);
+  font-weight: bold;
+}
+form input::placeholder {
+  font-weight: bold;
+}
+form .icon-map-pin {
+  display: flex;
+  width: 50px;
+  border-radius: 15px 0 0 15px;
+  background: var(--second-bg-color);
+}
+form .icon-map-pin i {
+  margin: auto;
+}
+form button {
+  border: none;
+  width: 135px;
+  color: var(--main-bg-color);
+  background-color: var(--primary-color);
+  border-radius: 0 15px 15px 0;
+  font-weight: bold;
+  cursor: pointer;
+}
+form button:hover {
+  opacity: 0.9;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 2rem 0;
+  font-weight: bold;
+}
+.filters span {
+  margin-right: 2rem;
+}
+.filters .filter {
+  display: flex;
+  align-items: baseline;
+  margin-right: 1.5rem;
+  border: 2px solid #c4c4c4;
+  border-radius: 5rem;
+  cursor: pointer;
+  transition: all 100ms;
+}
+.filters .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--second-color);
+  border-radius: 5rem;
+  height: 2.6rem;
+  width: 2.6rem;
+  box-shadow: 0px 0px 0 2px var(--second-color);
+  color: var(--primary-color);
+  transition: all 300ms;
+}
+.filters p {
+  padding: 0 1rem 0 0.8rem;
+}
+/*  hide the browser's default checkbox */
+.filters .filter input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
+.filters .filter input:checked ~ .logo {
+  color: var(--main-bg-color);
+  background-color: var(--primary-color);
+  box-shadow: 0px 0px 0 2px var(--primary-color);
+  transition: all 300ms;
+}
+.filters .filter:hover {
+  background: var(--second-bg-color);
+  border: 2px solid var(--second-bg-color);
+  transition: all 100ms;
+}
 
-/* Grid */
-/* .activities-section{} */
+.infos {
+  display: flex;
+  align-items: center;
+}
+.infos .logo-infos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.2rem;
+  width: 1.2rem;
+  margin-right: 0.6rem;
+  border: 1px solid #c4c4c4;
+  border-radius: 5rem;
+  font-size: 11px;
+  color: var(--primary-color);
+}
+.infos p {
+  font-size: 14px;
+}
+
+/* ------ MAIN ------ */
+/* --- Lodging & Activities (general)  */
+.card {
+  border-radius: 20px;
+  padding: 0.3rem;
+  margin-bottom: 2rem;
+  box-shadow: var(--main-shadow);
+  background: var(--main-bg-color);
+}
+.card:hover {
+  opacity: 0.9;
+  box-shadow: 1px 1px 5px 0px #d4d3d3;
+}
+.card .card-content__infos {
+  font-size: 13px;
+}
+.card .card-content__score {
+  display: flex;
+  font-size: 11px;
+  color: var(--primary-color);
+}
+.card .card-content__score i {
+  width: 0.8rem;
+}
+.card .star-empty {
+  color: #cccccc;
+}
+.city-container,
+.popular-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--radius);
+  padding: 1.2rem 2rem 0;
+  background: var(--second-bg-color);
+}
+
+/* ------ MAIN ------ */
+/* --- Lodging Section (city) */
+.lodging-section {
+  display: flex;
+  justify-content: space-between;
+}
+.city-container {
+  width: 848px;
+  margin-right: 2rem;
+}
+
+.city__cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0.5rem 0;
+}
+.city__cards .card-image {
+  margin: auto;
+  height: 120px;
+}
+.city__cards .card-image img {
+  height: 120px;
+  width: 240px;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+.city__cards .card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 56px;
+  padding: 0.7rem 0.8rem 0.4rem;
+}
+
+.city__more {
+  font-weight: bold;
+  padding-bottom: 2rem;
+}
+.city__more:hover {
+  text-decoration: underline;
+}
+
+/* ------ MAIN ------ */
+/* --- Lodging Section (popular) */
+.popular-container {
+  width: 400px;
+}
+.popular__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular__cards {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem 0;
+}
+.popular__cards__card {
+  display: flex;
+  align-items: center;
+  width: 340px;
+  height: 137px;
+}
+.popular__cards .card-image {
+  display: flex;
+}
+.popular__cards .card-image img {
+  height: 137px;
+  width: 145px;
+  object-fit: cover;
+  border-radius: 20px 0 0 20px;
+}
+.popular__cards .card-content {
+  display: flex;
+  flex-direction: column;
+  height: 120px;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+.popular__cards .card-content__infos p {
+  padding-top: 0.5rem;
+}
+
+/* ------ MAIN ------ */
+/* --- Activities Section */
+.activities__cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.activities__cards__card {
+  padding: 0;
+}
+.activities__cards .card-image img {
+  height: 380px;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+.activities__cards .card-content {
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  height: 60px;
+}
+
+/*  two cards for one column  */
+.three-quarter,
+.half {
+  display: flex;
+  flex-direction: column;
+}
+.three-quarter .card:nth-of-type(1) {
+  height: 240px;
+}
+.three-quarter .card:nth-of-type(1) .card-image,
+.three-quarter .card:nth-of-type(1) .card-image img {
+  height: 180px;
+  object-position: center 40%;
+}
+.three-quarter .card:nth-of-type(2) {
+  height: 170px;
+}
+.three-quarter .card:nth-of-type(2) .card-image,
+.three-quarter .card:nth-of-type(2) .card-image img {
+  height: 110px;
+  object-position: center 20%;
+}
+
+.half .card:nth-of-type(1) {
+  height: 195px;
+}
+.half .card:nth-of-type(1) .card-image,
+.half .card:nth-of-type(1) .card-image img {
+  height: 140px;
+  object-position: center 10%;
+}
+.half .card:nth-of-type(2) {
+  height: 210px;
+}
+.half .card:nth-of-type(2) .card-image,
+.half .card:nth-of-type(2) .card-image img {
+  height: 150px;
+  object-position: center 10%;
+}
+
+/* ------ FOOTER ------ */
+footer {
+  display: flex;
+  background: var(--second-bg-color);
+  padding: 2rem 3.5rem;
+}
+.footer {
+  width: 33%;
+}
+.footer p {
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.footer ul {
+  font-size: 14px;
+}
+.footer li {
+  margin-bottom: 0.5rem;
+}
+.footer a:hover {
+  text-decoration: underline;
+}
+
+/* ------ RESPONSIVE ------  */
+/*  LAPTOP  */
+@media (max-width: 1374px) {
+  .city__cards {
+    justify-content: space-evenly;
+  }
+  .popular__cards__card {
+    width: 100%;
+  }
+}
+
+/* TABLETS */
+@media (max-width: 1100px) {
+  .lodging-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .popular-container {
+    order: 1;
+    margin-bottom: 2rem;
+    height: auto;
+  }
+  .city-container {
+    order: 2;
+    width: 750px;
+    height: auto;
+    background: transparent;
+  }
+  .city__cards .card-image,
+  .city__cards .card-image img,
+  .city__cards__card,
+  .popular__cards__card {
+    width: 340px;
+  }
+}
+
+/*  TABLETS AND SMARTPHONES */
+@media (max-width: 820px) {
+}
