--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --primary-color: #0065fc;
   --second-color: #deebff;
   --radius: 20px;
-  --main-shadow: 2px 2px 8px 0px #d4d3d3;
+  --main-shadow: 2px 2px 8px 0 #d4d3d3;
 }
 
 /* ------ GENERAL ------ */
@@ -27,11 +27,11 @@ section {
   padding: 1rem 0;
 }
 h1 {
-  font-size: 1.35rem;
+  font-size: 1.4rem;
   margin: 0.4rem 0;
 }
 h2 {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 600;
 }
 h3 {
@@ -73,14 +73,14 @@ header nav ul {
 header nav li {
   display: flex;
 }
-header nav ul a {
+header nav a {
   padding: 2rem 1.5rem;
 }
-header nav .active {
+header .active a {
   border-top: 3px solid var(--primary-color);
   color: var(--primary-color);
 }
-header nav .register {
+header .register a {
   font-weight: bold;
   color: var(--primary-color);
 }
@@ -128,6 +128,9 @@ form button {
 form button:hover {
   opacity: 0.9;
 }
+form .fa-search {
+  display: none;
+}
 
 .filters {
   display: flex;
@@ -136,7 +139,7 @@ form button:hover {
   margin: 2rem 0;
   font-weight: bold;
 }
-.filters span {
+.filters > span {
   margin-right: 2rem;
 }
 .filters .filter {
@@ -148,19 +151,19 @@ form button:hover {
   cursor: pointer;
   transition: all 100ms;
 }
-.filters .logo {
+.filters .icon {
   display: flex;
   justify-content: center;
   align-items: center;
   background: var(--second-color);
   border-radius: 5rem;
-  height: 2.6rem;
-  width: 2.6rem;
-  box-shadow: 0px 0px 0 2px var(--second-color);
+  height: 2.8rem;
+  width: 2.8rem;
+  box-shadow: 0 0 0 2px var(--second-color);
   color: var(--primary-color);
   transition: all 300ms;
 }
-.filters p {
+.filters .content {
   padding: 0 1rem 0 0.8rem;
 }
 /*  hide the browser's default checkbox */
@@ -171,10 +174,10 @@ form button:hover {
   height: 0;
   width: 0;
 }
-.filters .filter input:checked ~ .logo {
+.filters .filter input:checked ~ .icon {
   color: var(--main-bg-color);
   background-color: var(--primary-color);
-  box-shadow: 0px 0px 0 2px var(--primary-color);
+  box-shadow: 0 0 0 2px var(--primary-color);
   transition: all 300ms;
 }
 .filters .filter:hover {
@@ -183,11 +186,11 @@ form button:hover {
   transition: all 100ms;
 }
 
-.infos {
+.info-text {
   display: flex;
   align-items: center;
 }
-.infos .logo-infos {
+.info-text .info-logo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -199,32 +202,32 @@ form button:hover {
   font-size: 11px;
   color: var(--primary-color);
 }
-.infos p {
+.info-text p {
   font-size: 14px;
 }
 
-/* ------ MAIN ------ */
-/* --- Lodging & Activities (general)  */
+/* --- Lodging & Activities : General  */
 .card {
   border-radius: 20px;
   padding: 0.3rem;
   margin-bottom: 2rem;
   box-shadow: var(--main-shadow);
   background: var(--main-bg-color);
+  transition: all 200ms;
 }
 .card:hover {
-  opacity: 0.9;
-  box-shadow: 1px 1px 5px 0px #d4d3d3;
+  transform: scale(1.02);
+  box-shadow: 0px 0px 14px 3px #d4d3d3;
 }
-.card .card-content__infos {
+.card .infos {
   font-size: 13px;
 }
-.card .card-content__score {
+.card .score {
   display: flex;
   font-size: 11px;
   color: var(--primary-color);
 }
-.card .card-content__score i {
+.card .score i {
   width: 0.8rem;
 }
 .card .star-empty {
@@ -238,108 +241,103 @@ form button:hover {
   padding: 1.2rem 2rem 0;
   background: var(--second-bg-color);
 }
-
-/* ------ MAIN ------ */
-/* --- Lodging Section (city) */
 .lodging-section {
   display: flex;
   justify-content: space-between;
 }
+
+/* --- Lodging Section (City) */
 .city-container {
   width: 848px;
   margin-right: 2rem;
 }
-
-.city__cards {
+.city-container .cards {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0.5rem 0;
 }
-.city__cards .card-image {
+.city-container .card-image {
   margin: auto;
   height: 120px;
 }
-.city__cards .card-image img {
+.city-container .card-image img {
   height: 120px;
   width: 240px;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
-.city__cards .card-content {
+.city-container .card-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 56px;
   padding: 0.7rem 0.8rem 0.4rem;
 }
-
-.city__more {
+.city-container .more {
   font-weight: bold;
   padding-bottom: 2rem;
 }
-.city__more:hover {
+.city-container .more:hover {
   text-decoration: underline;
 }
 
-/* ------ MAIN ------ */
-/* --- Lodging Section (popular) */
+/* --- Lodging Section (Popular) */
 .popular-container {
   width: 400px;
 }
-.popular__title {
+.popular-container .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.popular__cards {
+.popular-container .cards {
   display: flex;
   flex-direction: column;
   margin: 0.5rem 0;
 }
-.popular__cards__card {
+.popular-container .card {
   display: flex;
   align-items: center;
   width: 340px;
   height: 137px;
 }
-.popular__cards .card-image {
+.popular-container .card-image {
   display: flex;
 }
-.popular__cards .card-image img {
+.popular-container .card-image img {
   height: 137px;
   width: 145px;
   object-fit: cover;
   border-radius: 20px 0 0 20px;
 }
-.popular__cards .card-content {
+.popular-container .card-content {
   display: flex;
   flex-direction: column;
   height: 120px;
   justify-content: space-between;
   padding: 0 1rem;
 }
-.popular__cards .card-content__infos p {
+.popular-container .infos p {
   padding-top: 0.5rem;
 }
 
-/* ------ MAIN ------ */
 /* --- Activities Section */
-.activities__cards {
+.activities-section .cards {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.activities__cards__card {
+.activities-section .card {
   padding: 0;
 }
-.activities__cards .card-image img {
+.activities-section .card-image img {
   height: 380px;
   width: 300px;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
-.activities__cards .card-content {
+.activities-section .card-content {
   display: flex;
   align-items: center;
   padding: 0 1rem;
@@ -352,36 +350,32 @@ form button:hover {
   display: flex;
   flex-direction: column;
 }
-.three-quarter .card:nth-of-type(1) {
+.three-quarter .first {
   height: 240px;
 }
-.three-quarter .card:nth-of-type(1) .card-image,
-.three-quarter .card:nth-of-type(1) .card-image img {
+.three-quarter .first .card-image img {
   height: 180px;
   object-position: center 40%;
 }
-.three-quarter .card:nth-of-type(2) {
+.three-quarter .second {
   height: 170px;
 }
-.three-quarter .card:nth-of-type(2) .card-image,
-.three-quarter .card:nth-of-type(2) .card-image img {
+.three-quarter .second .card-image img {
   height: 110px;
   object-position: center 20%;
 }
 
-.half .card:nth-of-type(1) {
+.half .first {
   height: 195px;
 }
-.half .card:nth-of-type(1) .card-image,
-.half .card:nth-of-type(1) .card-image img {
+.half .first .card-image img {
   height: 140px;
   object-position: center 10%;
 }
-.half .card:nth-of-type(2) {
+.half .second {
   height: 210px;
 }
-.half .card:nth-of-type(2) .card-image,
-.half .card:nth-of-type(2) .card-image img {
+.half .second .card-image img {
   height: 150px;
   object-position: center 10%;
 }
@@ -410,41 +404,226 @@ footer {
 }
 
 /* ------ RESPONSIVE ------  */
-/*  LAPTOP  */
+/*  --- MEDIUM LAPTOP  */
 @media (max-width: 1374px) {
-  .city__cards {
+  .city-container .cards {
     justify-content: space-evenly;
   }
-  .popular__cards__card {
+  .popular-container .card {
     width: 100%;
   }
 }
 
-/* TABLETS */
-@media (max-width: 1100px) {
+/*  --- TABLETS AND SMARTPHONES */
+@media (max-width: 820px) {
+  /* ------ HEADER ------ */
+  header {
+    position: relative;
+    display: block;
+    padding: 0;
+  }
+  header .logo {
+    padding: 1.5rem 1.3rem 0.6rem;
+  }
+  header .register {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.2rem;
+  }
+  header nav ul {
+    justify-content: flex-start;
+  }
+  header nav a {
+    padding: 0;
+  }
+  header li {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+  }
+  header li a {
+    padding: 0.7rem 0;
+  }
+  header .active a {
+    border-top: none;
+  }
+  header .active {
+    border-bottom: 3px solid var(--primary-color);
+  }
+  header .activities {
+    border-bottom: 3px solid var(--second-bg-color);
+  }
+
+  /* ------ MAIN ------ */
+  main {
+    padding: 0;
+  }
+
+  /* --- Search Section */
+  .search-section {
+    max-width: 750px;
+    margin: auto;
+    padding: 1rem;
+  }
+  .search-section > p {
+    margin: 1rem 0 2rem;
+  }
+  form .search-bar {
+    justify-content: center;
+    height: 3rem;
+    width: auto;
+  }
+  form button {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 15px;
+  }
+  form .fa-search {
+    display: inline-block;
+  }
+  form .rechercher {
+    display: none;
+  }
+
+  .filters > span {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .filters .filter {
+    margin: 0 0.7rem 1rem 0;
+  }
+
+  .info-text {
+    align-items: flex-start;
+  }
+  .info-text .info-logo {
+    height: 1.3rem;
+    width: 1.7rem;
+  }
+  .info-text p {
+    font-size: 16px;
+  }
+
+  /* --- Lodging & Activities : General  */
   .lodging-section {
     flex-direction: column;
     align-items: center;
   }
+  .popular-container,
+  .city-container {
+    padding: 1.2rem 1.1rem 0;
+    border-radius: 0;
+    margin-bottom: 0;
+  }
+
+  /* --- Lodging Section (Popular) */
   .popular-container {
+    width: 100%;
     order: 1;
-    margin-bottom: 2rem;
+    margin-bottom: 0;
     height: auto;
   }
+  .popular-container .card {
+    width: auto;
+  }
+  .popular-container .title i {
+    font-size: 1.4rem;
+  }
+  .popular-container .title,
+  .popular-container .cards {
+    padding: 0 2rem;
+    width: 330px;
+    margin: auto;
+  }
+  .card {
+    margin-bottom: 1rem;
+  }
+
+  /* --- Lodging Section (City) */
   .city-container {
-    order: 2;
-    width: 750px;
     height: auto;
+    width: auto;
+    margin: auto;
+    order: 2;
     background: transparent;
   }
-  .city__cards .card-image,
-  .city__cards .card-image img,
-  .city__cards__card,
-  .popular__cards__card {
+  .city-container .cards {
+    flex-direction: column;
+  }
+  .city-container .card {
+    width: auto;
+  }
+  .city-container .card-image,
+  .city-container .card-image img,
+  .city-container .card {
     width: 340px;
   }
-}
+  .city-container .more {
+    padding-bottom: 1rem;
+  }
 
-/*  TABLETS AND SMARTPHONES */
-@media (max-width: 820px) {
+  /* --- Activities Section */
+  .activities-section {
+    padding: 0 1.4rem 2rem;
+  }
+  .activities-section .title {
+    width: 340px;
+    margin: auto;
+  }
+  .activities-section .cards {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+  .activities-section .card-image img {
+    height: 135px;
+    width: 335px;
+    object-position: center 20%;
+  }
+  .activities-section .card-content {
+    height: 54px;
+  }
+
+  .three-quarter .first,
+  .three-quarter .second,
+  .half .first,
+  .half .second {
+    height: auto;
+  }
+  .three-quarter .first .card-image img {
+    height: 135px;
+    width: 335px;
+    object-position: center 43%;
+  }
+
+  .three-quarter .second .card-image img {
+    height: 135px;
+    width: 335px;
+    object-position: center 18%;
+  }
+  .half .second .card-image img {
+    object-position: center 15%;
+  }
+
+  /* ------ FOOTER ------ */
+  footer {
+    flex-direction: column;
+    padding: 3rem 2rem 0;
+  }
+  .footer {
+    width: auto;
+    margin-bottom: 2rem;
+  }
+  .footer p {
+    font-size: 1.1rem;
+  }
+  .footer ul {
+    font-size: 1rem;
+  }
+  .footer li {
+    margin-bottom: 0.8rem;
+  }
 }
