[CSS] - style.css : fix menu links on hover

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,10 @@ header nav ul {
 header nav li {
   display: flex;
 }
+header nav li:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
 header nav a {
   padding: 2rem 1.5rem;
 }
