--- a/css/style.css
+++ b/css/style.css
@@ -72,15 +72,14 @@ header nav ul {
 }
 header nav li {
   display: flex;
-}
-header nav li:hover {
-  text-decoration: underline;
-  text-underline-offset: 5px;
+  cursor: pointer;
 }
 header nav a {
+  border-top: 3px solid transparent;
   padding: 2rem 1.5rem;
+  transition: all 200ms;
 }
-header .active a {
+header nav li:hover a {
   border-top: 3px solid var(--primary-color);
   color: var(--primary-color);
 }
@@ -140,7 +139,7 @@ form .fa-search {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  margin: 2rem 0;
+  margin: 2rem 0 1.5rem;
   font-weight: bold;
 }
 .filters > span {
@@ -149,7 +148,7 @@ form .fa-search {
 .filters .filter {
   display: flex;
   align-items: baseline;
-  margin-right: 1.5rem;
+  margin: 0 1.5rem 0.5rem 0;
   border: 2px solid #c4c4c4;
   border-radius: 5rem;
   cursor: pointer;
@@ -446,18 +445,23 @@ footer {
     width: 50%;
     display: flex;
     justify-content: center;
+    transition: all 300ms;
   }
   header li a {
     padding: 0.7rem 0;
   }
-  header .active a {
-    border-top: none;
+  header nav li:not(.register) {
+    border-bottom: 3px solid var(--second-bg-color);
   }
-  header .active {
+  header nav li:not(.register):hover {
     border-bottom: 3px solid var(--primary-color);
   }
-  header .activities {
-    border-bottom: 3px solid var(--second-bg-color);
+  header nav .register:hover {
+    opacity: 0.8;
+  }
+  header nav a,
+  header nav li:hover a {
+    border-top: none;
   }
 
   /* ------ MAIN ------ */
@@ -482,7 +486,7 @@ footer {
   form button {
     width: 3rem;
     height: 3rem;
-    border-radius: 15px;
+    border-radius: 0 15px 15px 0;
   }
   form .fa-search {
     display: inline-block;
@@ -517,7 +521,8 @@ footer {
   }
   .popular-container,
   .city-container {
-    padding: 1.2rem 1.1rem 0;
+    box-sizing: border-box;
+    padding: 1.2rem 0.5rem 0;
     border-radius: 0;
     margin-bottom: 0;
   }
@@ -537,8 +542,9 @@ footer {
   }
   .popular-container .title,
   .popular-container .cards {
-    padding: 0 2rem;
-    width: 330px;
+    padding: 0 0.5rem;
+    /* width: 330px; */
+    width: 95vw;
     margin: auto;
   }
   .card {
@@ -562,7 +568,9 @@ footer {
   .city-container .card-image,
   .city-container .card-image img,
   .city-container .card {
-    width: 340px;
+    /* width: 340px; */
+    /* width: 95vw; */
+    width: 88vw;
   }
   .city-container .more {
     padding-bottom: 1rem;
@@ -570,10 +578,11 @@ footer {
 
   /* --- Activities Section */
   .activities-section {
-    padding: 0 1.4rem 2rem;
+    padding: 0 0.5rem 2rem;
   }
   .activities-section .title {
-    width: 340px;
+    /* width: 340px; */
+    width: 90vw;
     margin: auto;
   }
   .activities-section .cards {
@@ -584,7 +593,9 @@ footer {
   }
   .activities-section .card-image img {
     height: 135px;
-    width: 335px;
+    /* width: 335px; */
+    /* width: 95vw; */
+    width: 90vw;
     object-position: center 20%;
   }
   .activities-section .card-content {
@@ -599,13 +610,17 @@ footer {
   }
   .three-quarter .first .card-image img {
     height: 135px;
-    width: 335px;
+    /* width: 335px; */
+    /* width: 95vw; */
+    width: 90vw;
     object-position: center 43%;
   }
 
   .three-quarter .second .card-image img {
     height: 135px;
-    width: 335px;
+    /* width: 335px; */
+    /* width: 95vw; */
+    width: 90vw;
     object-position: center 18%;
   }
   .half .second .card-image img {
